--- a/Kurs_RC4/Kurs_RC4.csproj
+++ b/Kurs_RC4/Kurs_RC4.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Extentions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RC4.cs" />
+    <Compile Include="RC4\RC4.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
